--- a/package.json
+++ b/package.json
@@ -6,17 +6,11 @@
   "directories": {
     "test": "test"
   },
-  "dependencies": {
-    "@vaadin/vaadin": "^14.0.2",
-    "@vaadin/vaadin-button": "^2.2.1",
-    "@vaadin/vaadin-date-picker": "^4.0.3",
-    "@vaadin/vaadin-select": "^2.1.5",
-    "@vaadin/vaadin-text-field": "^2.3.10"
-  },
+  "dependencies": {},
   "devDependencies": {
     "eslint": "^6.2.2",
     "html-webpack-plugin": "^3.2.0",
-    "webpack": "^4.39.2",
+    "webpack": "^4.39.3",
     "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.8.0"
   },
